--- a/TyDtk/TyDTK.storyboard
+++ b/TyDtk/TyDTK.storyboard
@@ -5,7 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
-        <!--选择专业-->
+        <!--专业分类-->
         <scene sceneID="vjh-Hq-eII">
             <objects>
                 <viewController id="x8q-Eh-BPE" customClass="IndexViewController" sceneMemberID="viewController">
@@ -92,14 +92,14 @@
                             </mask>
                         </variation>
                     </view>
-                    <navigationItem key="navigationItem" title="选择专业" id="Ten-2A-EdX">
+                    <navigationItem key="navigationItem" title="专业分类" id="Ten-2A-EdX">
                         <barButtonItem key="leftBarButtonItem" id="Fbr-2j-XZx">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="w1V-gc-z5L">
                                 <rect key="frame" x="16" y="13" width="56" height="18"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <inset key="imageEdgeInsets" minX="-5" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                <state key="normal" title="定位" image="45BA68F0-EF1C-451E-9C4B-CA90A6738574">
+                                <state key="normal" title="定位" image="0164E694-E96E-4301-8C73-0D387E254DA2">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -125,7 +125,7 @@
             </objects>
             <point key="canvasLocation" x="-1326.5" y="-558.5"/>
         </scene>
-        <!--选择科目-->
+        <!--相关专业-->
         <scene sceneID="xEP-nS-Rk9">
             <objects>
                 <viewController id="ptg-f2-eZY" customClass="SecoundSubjectViewController" sceneMemberID="viewController">
@@ -314,7 +314,7 @@
                             </mask>
                         </variation>
                     </view>
-                    <navigationItem key="navigationItem" title="选择科目" id="CIz-Fu-eg3"/>
+                    <navigationItem key="navigationItem" title="相关专业" id="CIz-Fu-eg3"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="imageBackGrd" destination="D6T-lU-Zea" id="VkT-EE-1qA"/>
@@ -521,7 +521,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="45BA68F0-EF1C-451E-9C4B-CA90A6738574" width="10" height="10">
+        <image name="0164E694-E96E-4301-8C73-0D387E254DA2" width="10" height="10">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGOjtYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK0HCBEW
 GxwgISgrLjQ3VSRudWxs1AkKCwwNDg8QViRjbGFzc1xOU0ltYWdlRmxhZ3NWTlNSZXBzV05TQ29sb3KA
