--- a/TyDtk/TyUserIn.storyboard
+++ b/TyDtk/TyUserIn.storyboard
@@ -188,17 +188,18 @@
                                             <rect key="frame" x="0.0" y="0.0" width="342" height="59"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="头像" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aiX-DV-t7z">
-                                                    <rect key="frame" x="15" y="10" width="60" height="39"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="10" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aiX-DV-t7z">
+                                                    <rect key="frame" x="15" y="20" width="60" height="20"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="60" id="jGo-ft-v3p"/>
+                                                        <constraint firstAttribute="width" constant="60" id="Bqp-lY-Aoo"/>
+                                                        <constraint firstAttribute="height" constant="20" id="r3W-Ks-ygY"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" tag="12" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AIO-Md-UnK">
-                                                    <rect key="frame" x="282" y="5" width="50" height="50"/>
+                                                <imageView userInteractionEnabled="NO" tag="11" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AIO-Md-UnK">
+                                                    <rect key="frame" x="292" y="5" width="50" height="50"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="50" id="iwc-ZD-k8p"/>
                                                         <constraint firstAttribute="width" constant="50" id="r27-dl-W01"/>
@@ -206,11 +207,10 @@
                                                 </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="aiX-DV-t7z" secondAttribute="bottom" constant="10" id="A2T-GO-yBO"/>
+                                                <constraint firstItem="aiX-DV-t7z" firstAttribute="leading" secondItem="pnj-sc-OpT" secondAttribute="leading" constant="15" id="5x1-pG-cnx"/>
                                                 <constraint firstItem="AIO-Md-UnK" firstAttribute="centerY" secondItem="pnj-sc-OpT" secondAttribute="centerY" id="Czi-Gd-VoO"/>
-                                                <constraint firstAttribute="trailing" secondItem="AIO-Md-UnK" secondAttribute="trailing" constant="10" id="JUw-Ks-xlX"/>
-                                                <constraint firstItem="aiX-DV-t7z" firstAttribute="top" secondItem="pnj-sc-OpT" secondAttribute="top" constant="10" id="dga-Ea-fkX"/>
-                                                <constraint firstItem="aiX-DV-t7z" firstAttribute="leading" secondItem="pnj-sc-OpT" secondAttribute="leading" constant="15" id="kZ7-G9-7mE"/>
+                                                <constraint firstItem="aiX-DV-t7z" firstAttribute="centerY" secondItem="pnj-sc-OpT" secondAttribute="centerY" id="GyN-yV-QYf"/>
+                                                <constraint firstAttribute="trailing" secondItem="AIO-Md-UnK" secondAttribute="trailing" id="JUw-Ks-xlX"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
