update person pwd

--- a/TyDtk/MyNoteTableViewCell.xib
+++ b/TyDtk/MyNoteTableViewCell.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
@@ -13,7 +14,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="411" height="152"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dtk" translatesAutoresizingMaskIntoConstraints="NO" id="LpM-mg-NFc">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="persenself.png" translatesAutoresizingMaskIntoConstraints="NO" id="LpM-mg-NFc">
                         <rect key="frame" x="15" y="15" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="ZWD-jw-xcj"/>
@@ -49,15 +50,14 @@
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="emg-9i-Shl">
-                        <rect key="frame" x="361" y="15" width="50" height="20"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="emg-9i-Shl">
+                        <rect key="frame" x="376" y="15" width="35" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="50" id="Igs-qz-WAg"/>
-                            <constraint firstAttribute="height" constant="20" id="KGG-J7-T73"/>
+                            <constraint firstAttribute="width" constant="35" id="Igs-qz-WAg"/>
+                            <constraint firstAttribute="height" constant="30" id="KGG-J7-T73"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <state key="normal" title="删除">
-                            <color key="titleColor" red="1" green="0.13595605050000001" blue="0.14670809039999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <state key="normal" image="ljt001.png">
+                            <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </state>
                         <connections>
                             <action selector="buttonDeleteClick:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="FED-Li-sVr"/>
@@ -68,6 +68,7 @@
                     <constraint firstItem="JZi-rb-bxd" firstAttribute="top" secondItem="LpM-mg-NFc" secondAttribute="bottom" constant="15" id="6yC-We-WWm"/>
                     <constraint firstItem="Tqi-22-Rde" firstAttribute="leading" secondItem="LpM-mg-NFc" secondAttribute="trailing" constant="10" id="HlK-E4-UiL"/>
                     <constraint firstItem="Tqi-22-Rde" firstAttribute="top" secondItem="LpM-mg-NFc" secondAttribute="top" id="Kes-yQ-FTn"/>
+                    <constraint firstAttribute="trailing" secondItem="emg-9i-Shl" secondAttribute="trailing" id="QUl-a0-vSt"/>
                     <constraint firstItem="LpM-mg-NFc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="RtP-Yv-auW"/>
                     <constraint firstItem="nPc-RL-Pgc" firstAttribute="bottom" secondItem="LpM-mg-NFc" secondAttribute="bottom" constant="1" id="bdM-HV-83K"/>
                     <constraint firstAttribute="trailing" secondItem="JZi-rb-bxd" secondAttribute="trailing" constant="15" id="eHZ-pG-mmf"/>
@@ -77,6 +78,11 @@
                     <constraint firstItem="nPc-RL-Pgc" firstAttribute="leading" secondItem="Tqi-22-Rde" secondAttribute="leading" id="mo1-o2-j1C"/>
                     <constraint firstItem="LpM-mg-NFc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="wT0-Gt-yLz"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="g6n-vm-fnL"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="buttonDelete" destination="emg-9i-Shl" id="lYJ-9D-nz9"/>
@@ -90,6 +96,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="dtk" width="211" height="202"/>
+        <image name="ljt001.png" width="48" height="48"/>
+        <image name="persenself.png" width="48" height="48"/>
     </resources>
 </document>
