--- a/TyDtk/NotesUserCell.xib
+++ b/TyDtk/NotesUserCell.xib
@@ -14,7 +14,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="400" height="134"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dtk" translatesAutoresizingMaskIntoConstraints="NO" id="Jm5-XA-UuB">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="persenself.png" translatesAutoresizingMaskIntoConstraints="NO" id="Jm5-XA-UuB">
                         <rect key="frame" x="15" y="15" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="40" id="B9B-9U-2oL"/>
@@ -57,14 +57,14 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sl3-ul-ZJX">
-                        <rect key="frame" x="340" y="16" width="50" height="20"/>
+                        <rect key="frame" x="355" y="16" width="35" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="50" id="H5u-wO-FbX"/>
-                            <constraint firstAttribute="height" constant="20" id="dRb-FZ-A96"/>
+                            <constraint firstAttribute="width" constant="35" id="H5u-wO-FbX"/>
+                            <constraint firstAttribute="height" constant="30" id="dRb-FZ-A96"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <state key="normal" title="删除">
-                            <color key="titleColor" red="1" green="0.13595605050000001" blue="0.14670809039999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <state key="normal" image="ljt001.png">
+                            <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </state>
                         <connections>
                             <action selector="buttonDeleteClick:" destination="ukT-da-WUZ" eventType="touchUpInside" id="aGE-kq-Lf3"/>
@@ -97,6 +97,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="dtk" width="211" height="202"/>
+        <image name="ljt001.png" width="48" height="48"/>
+        <image name="persenself.png" width="48" height="48"/>
     </resources>
 </document>
